# mcpacker

./: Cargo.toml  README.md
src/: errors.rs  main.rs  manifest.rs  manifest_json.rs  murmur2.rs  options_sorted.rs  twitch_api.rs
src/app/: author.rs  bump.rs  init.rs  mod.rs  pack.rs  sync.rs
src/app/includes/: add.rs  mod.rs  remove.rs
src/commands/: author.rs  bump.rs  init.rs  mod.rs  pack.rs  sync.rs
src/commands/includes/: add.rs  mod.rs  remove.rs
src/files/: manifest.rs  manifest_json.rs  minecraft_instance.rs  mod.rs
src/utils/: compare.rs  mod.rs  twitch_api.rs
