[package]
name = "mcpacker"
version = "0.1.0"
authors = ["Will Dixon <will@acst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
zip = "0.5"
reqwest = { version = "0.10", features = ["json", "rustls-tls", "stream"] }
url = "2.1"
tokio = { version = "0.2", features = ["rt-threaded", "io-util", "stream", "fs"] }
futures = "0.3"
