[package]
name = "mcpacker"
version = "0.1.0"
authors = ["Will Dixon <will@acst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"
url = "2.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json", "rustls-tls", "stream", "trust-dns"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-threaded", "io-util", "stream", "fs"]

[dependencies.semver]
version = "0.9"
default-features = false
features = ["serde"]

[dependencies.git2]
version = "0.13"
default-features = false

# TODO figure out what is needed here
[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate", "time"]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.fasthash]
version = "0.4"
default-features = false